Harden Desktop Adventure Mode bridge
- Locate the mobile-dev fat jar in both layouts: source checkout
  (forge-gui-mobile-dev/target) and installer build, where the jar
  ships in the application directory next to the desktop jar. Derive
  the spawned process's working dir from the jar's location so res/
  resolves either way. Read the Maven-generated classpath only as a
  source-dev fallback, and fail loudly instead of walking ~/.m2 by hand.
- Rely on the fat-jar manifest for --add-opens rather than duplicating
  the list on the command line.
- Make IPC writes atomic (temp file + move) and signal creation
  idempotent, fixing a hang on the second battle when a stale
  completion signal remained. Each launch uses a private per-process
  IPC directory, purged on shutdown.
- Bound the desktop post-match navigation wait and the mobile result
  waiter so a stalled UI or a dead host can't hang either process.
- Share the overlay-draw loop via Forge.drawOverlays instead of
  duplicating it in DuelScene.render().

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>